View Issue Details

IDProjectCategoryView StatusLast Update
0024919CommunityOCCT:Modeling Datapublic2014-11-11 12:52
Reporterdrazmyslovich Assigned Toapn  
PrioritynormalSeveritycrash 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.6.0 
Target Version6.8.0Fixed in Version6.8.0 
Summary0024919: ShapeFix can crash time-to-time due to inproper interator handling inside of Approx_SameParameter::Build function
DescriptionLines 461-464 of Approx_SameParameter::Build function:
while(Param_de_decoupeC1(inter) <= fcons + deltamin) inter++;
while(Param_de_decoupeC1(NbInt) >= lcons - deltamin) NbInt--;

while(inter <= NbInt || ii < NCONTROL) {
Variable inter isn't checked to be inside of Param_de_decoupeC1 range, what can result in access violation exception.
Steps To ReproduceI can't provide the model, which contains the case, when ShapeFix crashes due to this error.
TagsNo tags attached.
Test case numberNot needed

Activities

drazmyslovich

2014-05-14 14:35

developer   ~0029319

Please, review the patch

abv

2014-05-14 15:35

manager   ~0029326

@drazmyslovich: can you extract single edge or face on which the problem appears, instead of sending the whole model (which is confidential as far as I understand)? I deem single edge would not be confidential but still can allow creating a test case, and perhaps we can do more in-depth analysis of the problem.

apn

2014-05-22 16:52

administrator   ~0029474

Tested with 24921

drazmyslovich

2014-05-22 17:11

developer   ~0029475

Unfortunately, I was unable to find the test case, where I've met this error. Sorry.

Related Changesets

occt: master 3f5bebe8

2014-05-14 10:28:15

razmyslovich


Committer: apn Details Diff
0024919: ShapeFix can crash time-to-time due to inproper interator handling inside of Approx_SameParameter::Build function

Check inter variable to be inside of the desired range
Affected Issues
0024919
mod - src/Approx/Approx_SameParameter.cxx Diff File

Issue History

Date Modified Username Field Change
2014-05-14 14:18 drazmyslovich New Issue
2014-05-14 14:18 drazmyslovich Assigned To => drazmyslovich
2014-05-14 14:35 drazmyslovich Note Added: 0029319
2014-05-14 14:35 drazmyslovich Status new => resolved
2014-05-14 15:35 abv Note Added: 0029326
2014-05-14 15:35 abv Assigned To drazmyslovich => ifv
2014-05-14 15:35 abv Target Version Unscheduled => 6.8.0
2014-05-22 16:52 apn Note Added: 0029474
2014-05-22 16:54 apn Test case number => Not needed
2014-05-22 16:54 apn Assigned To ifv => bugmaster
2014-05-22 16:54 apn Status resolved => reviewed
2014-05-22 16:54 apn Status reviewed => tested
2014-05-22 17:11 drazmyslovich Note Added: 0029475
2014-05-23 14:25 apn Changeset attached => occt master 3f5bebe8
2014-05-23 14:25 apn Assigned To bugmaster => apn
2014-05-23 14:25 apn Status tested => verified
2014-05-23 14:25 apn Resolution open => fixed
2014-06-17 12:47 aiv Project Open CASCADE => Community
2014-11-11 12:46 aiv Fixed in Version => 6.8.0
2014-11-11 12:52 aiv Status verified => closed