0024919: ShapeFix can crash time-to-time due to inproper interator handling inside of Approx_SameParameter::Build function

Check inter variable to be inside of the desired range